# bmail

./: Cargo.toml  LICENSE  bMail Spec.md
.codewhale/: instructions.md
src/: app.rs  commands.rs  config.rs  db.rs  html2md.rs  imap.rs  main.rs  notify.rs  smtp.rs  theme.rs
src/ui/: command_menu.rs  compose.rs  email_list.rs  email_view.rs  folder_pane.rs  mod.rs  setup.rs
